# rpi_dashboard

./: CMakeLists.txt  Dashboard.qml  Main.qml  Osu.qml  PcOFF.qml  README.md  Spotify.qml  config.ini  main.cpp
assets/: Assets.qrc  Fonts.qrc  Style.qml
backend/: backend.cpp  backend.h  osu.cpp  osu.h  prometheusclient.cpp  prometheusclient.h  spotify.cpp  spotify.h  weatherclient.cpp  weatherclient.h  wsupdator.cpp  wsupdator.h
components/: Gauge.qml  InfoTile.qml  Uptime.qml  Utils.js  WeatherTile.qml
